--- a/Pendu.css
+++ b/Pendu.css
@@ -69,3 +69,23 @@ label {
     background-color: #721c24;
     color: white;
 }
+
+#Pendu {
+
+    margin-top: -20px;
+    width: 100px;
+    height: 0;
+
+}
+
+#Gagner {
+
+    margin-top: -20px;
+    width: 300px;
+    height: 0;
+
+}
+
+#Lettre {
+    color: white;
+}
